updates on methods from collect(Collection.toList() -> toList())